Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12714

Sorting order of symbols inconsistent

XMLWordPrintable

    • 89eb33dd67d788846682a8b7c106a21688248d91 (qt-creator/qt-creator/master)

      Compare order of symbols in:

      • Sidebar: Class View
      • Sidebar: Type Hierarchy
      • Symbols drown-down menu (if "Sort Alphabetically" is checked)
      • C++ Locators

      e.g. for

      class Base{};
      class ClassAA : public Base {};
      class ClassAB : public Base {};
      class Classab : public Base {};
      class Classaa : public Base {};
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            kosjar Nikolai Kosjar
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes