CppTools: Use consistent sorting in the two outlines

Use case-sensitive sorting in the side bar outline, just like in
the editor outline.

Fixes: QTCREATORBUG-12714
Change-Id: I9d8243c61fcceb6e3d7b55e3b27fa5d20accccea
Reviewed-by: Christian Stenger <christian.stenger@qt.io>